# huffman

./: .gitignore  Cargo.toml  README.md  pg22048.txt  shell.nix  zero.py
0_echauffement/: README.md
0_echauffement/correction/: Cargo.toml
0_echauffement/correction/src/: main.rs
1_huffman/: Cargo.toml  README.md
1_huffman/src/: solution.rs  test.rs
echauffement/: README.md
minmax/: Cargo.toml
minmax/src/: main.rs
notes/: Makefile  pres.html  pres.md  pres.tex
src/: exercice.rs  main.rs  solution.rs  test.rs
