[package]
name = "huffman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitvec = { version = "1.0.1", features = ["serde"] }
itertools = "0.11.0"
serde = { version = "1.0.192", features = ["derive"] }

[dev-dependencies]
test-case = "3.3.0"